4.0 regression: OpenGL distorts YUY2 pictures
When using the default video output (namely EGL X11), YUY2 picture is badly distorted: the content is squeezed on the left, and the right is only stretched lines.
There are no such problems with RENDER video output (which requires conversion with swscale
), so this is ostensibly a problem with the GL video output.
Edited by Rémi Denis-Courmont