opengl: handle downscaled luminance components

Commit d8aebc365d81e76d4d502e7f97464f8fb3d65482 said:

> The texture scaling factor represents how a plane is scaled compared
> to the first plane, so by definition, the first plane is not scaled
> (its ratio is 1:1).

However, with YUY2 pictures, half the horizontal resolution is currently
lost by the interop. Therefore, until this is fixed, the sampler must
scale accordingly.

This reverts commit d8aebc365d81e76d4d502e7f97464f8fb3d65482.

Fixes #26682